--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
     </div>
    </div>
 </main>
-  
-
- 
-  
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/yogesan66" target="_blank">Yogesan</a>.
   </div>
+</footer>
+
 </body>
 </html>
